# DES_4_pydbus_module

./: .gitignore  CMakeLists.txt  README.md  VehicleControl.xml  commonapi.ini  main_publish.py  main_subscribe.py  vehicle_control.py  vehicle_control_proxy.h  vehicle_dbus_service.py
fidl/: jetson.fdepl  jetson.fidl
include/: JetsonStubImpl.hpp  VehicleControlProxy.hpp  VehicleControlProxyImpl.hpp
rasptest/: JetsonProxyImpl.cpp  JetsonProxyImpl.hpp  main.cpp
src/: JetsonStubImpl.cpp  Publisher.py  VehicleControlProxyImpl.cpp  VehicleDbusService.py  main.cpp
src-gen/core/v0/commonapi/: JetsonProxyBase.hpp  JetsonStub.hpp  JetsonStubDefault.hpp
src-gen/someip/v0/commonapi/: JetsonSomeIPCatalog.json  JetsonSomeIPProxy.cpp  JetsonSomeIPStubAdapter.cpp  JetsonSomeIPStubAdapter.hpp
test_src/: main_subscribe.cpp
